@@ -95,6 +95,11 @@ New users can be added with the
 command.
 This is discouraged.
 .Dl ./honk adduser
+.Pp
+Passwords may be reset with the
+.Ic chpass
+command.
+.Dl ./honk chpass username
 .Ss MAINTENANCE
 The database may grow large over time.
 The
